+Sidebar UI && Layout , Header UI && Layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -11,18 +12,18 @@
         <div class="header">
             <div class="header__top">
                 <div class="search">
-                    <img src="" alt="">
+                    <img src="/Assets/magnify.png" alt="" class="icon">
                     <input type="text" name="search" id="search">
                 </div>
                 <div class="profile">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="/Assets/bell-outline.png" alt="" class="icon">
+                    <img src="/Assets/3551739.jpg" class="profile-pic" alt="">
                     <h2 class="username-main">Timothy</h2>
                 </div>
             </div>
             <div class="header__bottom">
                 <div class="header__introduce">
-                    <img src="" alt="">
+                    <img src="/Assets/3551739.jpg" alt="" class="profile-pic-LG">
                     <div class="introduction">
                         <p>Hi there,</p>
                         <h2>Timothy (@Timothy)</h2>
@@ -30,9 +31,9 @@
                 </div>
                 <div class="header__nav">
                     <ul>
-                        <li>New</li>
-                        <li>Upload</li>
-                        <li>Share</li>
+                        <li><button class="btn-primary">New</button></li>
+                        <li><button class="btn-primary">Upload</button></li>
+                        <li><button class="btn-primary">Share</button></li>
                     </ul>
                 </div>
             </div>
