--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
             <div class="sidebar__main">
                 <ul>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/home-outline.png" alt="" class="icon">
                         <h2>Home</h2>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/account.png" alt="" class="icon">
                         <h2>Profile</h2>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/message-settings.png" alt="" class="icon">
                         <h2>Messages</h2>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/history.png" alt="" class="icon">
                         <h2>History</h2>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/file-tree.png" alt="" class="icon">
                         <h2>Tasks</h2>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/account-group-outline.png" alt="" class="icon">
                         <h2>Communities</h2>
                     </li>
                 </ul>
@@ -74,17 +74,17 @@
             <div class="sidebar__foot">
                 <ul>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/cog-outline.png" alt="">
                             <h2>Settings</h2>
                         </img>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/lifebuoy.png" alt="">
                             <h2>Support</h2>
                         </img>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="/Assets/shield-check.png" alt="">
                             <h2>Privacy</h2>
                         </img>
                     </li>
