basic layout done

--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
             <div class="sidebar__foot">
                 <ul>
                     <li>
-                        <img src="/Assets/cog-outline.png" alt="">
+                        <img src="/Assets/cog-outline.png" alt="" class="icon">
                             <h2>Settings</h2>
                         </img>
                     </li>
                     <li>
-                        <img src="/Assets/lifebuoy.png" alt="">
+                        <img src="/Assets/lifebuoy.png" alt="" class="icon">
                             <h2>Support</h2>
                         </img>
                     </li>
                     <li>
-                        <img src="/Assets/shield-check.png" alt="">
+                        <img src="/Assets/shield-check.png" alt="" class="icon">
                             <h2>Privacy</h2>
                         </img>
                     </li>
@@ -101,7 +101,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illo vel mollitia atque expedita iure illum error culpa quidem itaque?</p>
                         </div>
                         <div class="main__card-icons">
-
+                            <img src="/Assets/star-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/eye-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/share-variant.png" alt="" class="icon">
                         </div>
                     </div>
                     <div class="main__card">
@@ -110,7 +112,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illo vel mollitia atque expedita iure illum error culpa quidem itaque?</p>
                         </div>
                         <div class="main__card-icons">
-
+                            <img src="/Assets/star-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/eye-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/share-variant.png" alt="" class="icon">
                         </div>
                     </div>
                     <div class="main__card">
@@ -119,7 +123,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illo vel mollitia atque expedita iure illum error culpa quidem itaque?</p>
                         </div>
                         <div class="main__card-icons">
-
+                            <img src="/Assets/star-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/eye-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/share-variant.png" alt="" class="icon">
                         </div>
                     </div>
                     <div class="main__card">
@@ -128,7 +134,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illo vel mollitia atque expedita iure illum error culpa quidem itaque?</p>
                         </div>
                         <div class="main__card-icons">
-
+                            <img src="/Assets/star-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/eye-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/share-variant.png" alt="" class="icon">
                         </div>
                     </div>
                     <div class="main__card">
@@ -137,7 +145,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illo vel mollitia atque expedita iure illum error culpa quidem itaque?</p>
                         </div>
                         <div class="main__card-icons">
-
+                            <img src="/Assets/star-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/eye-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/share-variant.png" alt="" class="icon">
                         </div>
                     </div>
                     <div class="main__card">
@@ -146,51 +156,54 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illo vel mollitia atque expedita iure illum error culpa quidem itaque?</p>
                         </div>
                         <div class="main__card-icons">
-
+                            <img src="/Assets/star-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/eye-plus-outline.png" alt="" class="icon">
+                            <img src="/Assets/share-variant.png" alt="" class="icon">
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="main__announcements">
-                <h2>Announcements</h2>
-                <div class="annoucements__card">
-                    <div class="annoucement">
-                        <h3>Site Maintenence</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, sit?</p>
-                    </div>
-                    <div class="annoucement">
-                        <h3>Site Maintenence</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, sit?</p>
-                    </div>
-                    <div class="annoucement">
-                        <h3>Site Maintenence</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, sit?</p>
+            <div class="main__content-right">
+                <div class="main__announcements">
+                    <h2>Announcements</h2>
+                    <div class="announcements__card">
+                        <div class="annoucement">
+                            <h3>Site Maintenence</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, sit?</p>
+                        </div>
+                        <div class="annoucement">
+                            <h3>Site Maintenence</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, sit?</p>
+                        </div>
+                        <div class="annoucement">
+                            <h3>Site Maintenence</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, sit?</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="main__trending">
-                <h2>Trending</h2>
-                <div class="trending__card">
-                    <div class="trending">
-                        <img src="" alt="">
-                        <h3 class="username">@Tegan</h3>
-                        <p class="username-tag">World Peace Builder</p>
-                    </div>
-                    <div class="trending">
-                        <img src="" alt="">
-                        <h3 class="username">@Tegan</h3>
-                        <p class="username-tag">World Peace Builder</p>
-                    </div>
-                    <div class="trending">
-                        <img src="" alt="">
-                        <h3 class="username">@Tegan</h3>
-                        <p class="username-tag">World Peace Builder</p>
-                    </div>
-                    <div class="trending">
-                        <img src="" alt="">
-                        <h3 class="username">@Tegan</h3>
-                        <p class="username-tag">World Peace Builder</p>
+                <div class="main__trending">
+                    <h2>Trending</h2>
+                    <div class="trending__card">
+                        <div class="trending">
+                            <img src="" alt="">
+                            <h3 class="username">@Tegan</h3>
+                            <p class="username-tag">World Peace Builder</p>
+                        </div>
+                        <div class="trending">
+                            <img src="" alt="">
+                            <h3 class="username">@Tegan</h3>
+                            <p class="username-tag">World Peace Builder</p>
+                        </div>
+                        <div class="trending">
+                            <img src="" alt="">
+                            <h3 class="username">@Tegan</h3>
+                            <p class="username-tag">World Peace Builder</p>
+                        </div>
+                        <div class="trending">
+                            <img src="" alt="">
+                            <h3 class="username">@Tegan</h3>
+                            <p class="username-tag">World Peace Builder</p>
+                        </div>
                     </div>
                 </div>
             </div>
