--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
                 <ul>
                     <li>
                         <img src="/Assets/home-outline.png" alt="" class="icon">
-                        <h2>Home</h2>
+                        <a href="#"><h2>Home</h2></a>
                     </li>
                     <li>
                         <img src="/Assets/account.png" alt="" class="icon">
-                        <h2>Profile</h2>
+                        <a href="#"><h2>Profile</h2></a>
                     </li>
                     <li>
                         <img src="/Assets/message-settings.png" alt="" class="icon">
-                        <h2>Messages</h2>
+                        <a href="#"><h2>Messages</h2></a>
                     </li>
                     <li>
                         <img src="/Assets/history.png" alt="" class="icon">
-                        <h2>History</h2>
+                        <a href="#"><h2>History</h2></a>
                     </li>
                     <li>
                         <img src="/Assets/file-tree.png" alt="" class="icon">
-                        <h2>Tasks</h2>
+                        <a href="#"><h2>Tasks</h2></a>
                     </li>
                     <li>
                         <img src="/Assets/account-group-outline.png" alt="" class="icon">
-                        <h2>Communities</h2>
+                        <a href="#"><h2>Communities</h2></a>
                     </li>
                 </ul>
             </div>
@@ -75,17 +75,17 @@
                 <ul>
                     <li>
                         <img src="/Assets/cog-outline.png" alt="" class="icon">
-                            <h2>Settings</h2>
+                        <a href="#"><h2>Settings</h2></a>
                         </img>
                     </li>
                     <li>
                         <img src="/Assets/lifebuoy.png" alt="" class="icon">
-                            <h2>Support</h2>
+                        <a href="#"><h2>Support</h2></a>
                         </img>
                     </li>
                     <li>
                         <img src="/Assets/shield-check.png" alt="" class="icon">
-                            <h2>Privacy</h2>
+                        <a href="#"><h2>Privacy</h2></a>
                         </img>
                     </li>
                 </ul>
